crates/proto/tests/snapshots/snapshots__thumb_data_placeholder.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "jpeg_base64": "/9j/4AAQ",
  "placeholder": true,
  "retry_after_ms": 600000
}
