crates/proto/tests/snapshots/snapshots__thumb_get_1024.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "hash": "b4f8e9c2d1a00000000000000000000000000000000000000000000000000000",
  "size": 1024
}
