crates/proto/tests/snapshots/snapshots__timeline_query.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "cursor": "opaque-cursor-001",
  "limit": 200
}
